[package]
name = "typemarker_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.22"
proc-macro2 = "1.0.31"
syn = { version = "2.0.15", features = ["full"] }
darling = "0.20.3"

[dev-dependencies]
syn = { features = ["extra-traits"] }
