[package]
name = "typemarker_core"
description = "Core module of typemarker that includes all the code for the macro and tests"

version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"

authors = ["Lukas Friman<lukas@dreamplay.net"]
repository = "https://github.com/DreamplaySE/typemarker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.22"
proc-macro2 = "1.0.34"
syn = { version = "2.0.15", features = ["full"] }
darling = "0.20.3"

[dev-dependencies]
syn = { version = "2.0.15", features = ["full", "extra-traits"] }
