[package]
name = "typemarker"
description = "Procedural macro for easily creating multiple linked marker types"

version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"

authors = ["Lukas Friman<lukas@dreamplay.net"]
repository = "https://github.com/DreamplaySE/typemarker"
readme = "../README.md"
keywords = ["typestate"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.34"
typemarker_core = { path = "../core", version = "0.1.1" }
